// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-form-field-textarea-beta #render input attributes should render component as expected (1) 1`] = `"<gux-form-field-textarea-beta class=\\"hydrated\\"> <textarea slot=\\"input\\" id=\\"gux-form-field-input-i\\"></textarea> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-textarea-beta>"`;

exports[`gux-form-field-textarea-beta #render input attributes should render component as expected (1) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input gux-resize-undefined">
      <slot name="input"></slot>
    </div>
    <div class="gux-form-field-error">
      <gux-icon class="hydrated" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-textarea-beta #render input attributes should render component as expected (2) 1`] = `"<gux-form-field-textarea-beta class=\\"hydrated\\"> <textarea slot=\\"input\\" disabled=\\"\\" id=\\"gux-form-field-input-i\\"></textarea> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-textarea-beta>"`;

exports[`gux-form-field-textarea-beta #render input attributes should render component as expected (2) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-disabled gux-input gux-resize-undefined">
      <slot name="input"></slot>
    </div>
    <div class="gux-form-field-error">
      <gux-icon class="hydrated" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-textarea-beta #render input attributes should render component as expected (3) 1`] = `"<gux-form-field-textarea-beta class=\\"hydrated\\"> <textarea slot=\\"input\\" required=\\"\\" id=\\"gux-form-field-input-i\\"></textarea> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-textarea-beta>"`;

exports[`gux-form-field-textarea-beta #render input attributes should render component as expected (3) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label gux-required">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input gux-resize-undefined">
      <slot name="input"></slot>
    </div>
    <div class="gux-form-field-error">
      <gux-icon class="hydrated" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-textarea-beta #render label-position should render component as expected (1) 1`] = `"<gux-form-field-textarea-beta class=\\"hydrated\\"> <textarea slot=\\"input\\" id=\\"gux-form-field-input-i\\"></textarea> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-textarea-beta>"`;

exports[`gux-form-field-textarea-beta #render label-position should render component as expected (1) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input gux-resize-undefined">
      <slot name="input"></slot>
    </div>
    <div class="gux-form-field-error">
      <gux-icon class="hydrated" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-textarea-beta #render label-position should render component as expected (2) 1`] = `"<gux-form-field-textarea-beta label-position=\\"above\\" class=\\"hydrated\\"> <textarea slot=\\"input\\" id=\\"gux-form-field-input-i\\"></textarea> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-textarea-beta>"`;

exports[`gux-form-field-textarea-beta #render label-position should render component as expected (2) 2`] = `
<div class="gux-above gux-form-field-container">
  <div class="gux-above gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input gux-resize-undefined">
      <slot name="input"></slot>
    </div>
    <div class="gux-form-field-error">
      <gux-icon class="hydrated" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-textarea-beta #render label-position should render component as expected (3) 1`] = `"<gux-form-field-textarea-beta label-position=\\"beside\\" class=\\"hydrated\\"> <textarea slot=\\"input\\" id=\\"gux-form-field-input-i\\"></textarea> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-textarea-beta>"`;

exports[`gux-form-field-textarea-beta #render label-position should render component as expected (3) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input gux-resize-undefined">
      <slot name="input"></slot>
    </div>
    <div class="gux-form-field-error">
      <gux-icon class="hydrated" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-textarea-beta #render label-position should render component as expected (4) 1`] = `"<gux-form-field-textarea-beta label-position=\\"screenreader\\" class=\\"hydrated\\"> <textarea slot=\\"input\\" id=\\"gux-form-field-input-i\\"></textarea> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-textarea-beta>"`;

exports[`gux-form-field-textarea-beta #render label-position should render component as expected (4) 2`] = `
<div class="gux-form-field-container gux-screenreader">
  <div class="gux-form-field-label gux-screenreader">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input gux-resize-undefined">
      <slot name="input"></slot>
    </div>
    <div class="gux-form-field-error">
      <gux-icon class="hydrated" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-textarea-beta #render resize should render component as expected (1) 1`] = `"<gux-form-field-textarea-beta class=\\"hydrated\\"> <textarea slot=\\"input\\" id=\\"gux-form-field-input-i\\"></textarea> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-textarea-beta>"`;

exports[`gux-form-field-textarea-beta #render resize should render component as expected (1) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input gux-resize-undefined">
      <slot name="input"></slot>
    </div>
    <div class="gux-form-field-error">
      <gux-icon class="hydrated" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-textarea-beta #render resize should render component as expected (2) 1`] = `"<gux-form-field-textarea-beta resize=\\"auto\\" class=\\"hydrated\\"> <textarea slot=\\"input\\" id=\\"gux-form-field-input-i\\"></textarea> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-textarea-beta>"`;

exports[`gux-form-field-textarea-beta #render resize should render component as expected (2) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input gux-resize-auto" data-replicated-value>
      <slot name="input"></slot>
    </div>
    <div class="gux-form-field-error">
      <gux-icon class="hydrated" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-textarea-beta #render resize should render component as expected (3) 1`] = `"<gux-form-field-textarea-beta resize=\\"manual\\" class=\\"hydrated\\"> <textarea slot=\\"input\\" id=\\"gux-form-field-input-i\\"></textarea> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-textarea-beta>"`;

exports[`gux-form-field-textarea-beta #render resize should render component as expected (3) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input gux-resize-manual">
      <slot name="input"></slot>
    </div>
    <div class="gux-form-field-error">
      <gux-icon class="hydrated" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-textarea-beta #render resize should render component as expected (4) 1`] = `"<gux-form-field-textarea-beta resize=\\"none\\" class=\\"hydrated\\"> <textarea slot=\\"input\\" id=\\"gux-form-field-input-i\\"></textarea> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-textarea-beta>"`;

exports[`gux-form-field-textarea-beta #render resize should render component as expected (4) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input gux-resize-none">
      <slot name="input"></slot>
    </div>
    <div class="gux-form-field-error">
      <gux-icon class="hydrated" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
  </div>
</div>
`;
